# GoldKit-Prism

./: .gitignore  .gitmodules  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: build-release.yml
native/ptx-json/: CMakeLists.txt  main.cpp
native/ptx-json/ptformat/: Makefile  ptformat.cc
native/ptx-json/ptformat/bins/: TestMXF.ptx
native/ptx-json/ptformat/tests/t.12/: basicmxf
scripts/: build-icon.ts  build-native.ts  build-ptformat.ts  copy-ptformat-dlls.ts  ptformat-hashes.json
src/main/: index.ts  ipc.ts  native-binaries.ts  ptformat-wrapper.ts  ptx-json-wrapper.ts  session-cache.ts  store.ts
src/main/audio/: exporter.ts  wav-io.ts
src/main/pro-tools/: parser.ts  paths.test.ts  paths.ts
src/main/security/: allowlist.ts  ipc-guard.ts  preferences.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.css  index.html
src/renderer/components/: DropZone.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ProgressLogger.tsx  PtformatDebugPanel.tsx  SessionViewer.tsx  SettingsPanel.tsx  TopBar.tsx
src/renderer/hooks/: useExport.ts  useSession.ts
src/renderer/store/: appStore.ts
src/shared/: constants.ts  security-limits.ts  types.ts
